--- a/LibraryApp/Views/Copy/Edit.cshtml
+++ b/LibraryApp/Views/Copy/Edit.cshtml
@@ -3,32 +3,34 @@
     ViewData["Title"] = "Edytuj egzemplarz";
 }
 
-<partial name="Templates/_Alert" model="@ViewData["Alert"]?.ToString()"/>
+<partial name="Templates/_BackButton"/>
 
 <div class="col-sm-6 mx-auto">
-    <form asp-controller="Copy" asp-action="Edit" method="post">
-        <h1>Edytuj egzemplarz</h1>
+    <partial name="Templates/_Alert" model="@ViewData["Alert"]?.ToString()"/>
+    <div class="bg-white rounded shadow p-4">
+        <form asp-controller="Copy" asp-action="Edit" method="post">
+            <partial name="Templates/_FormHeader" model="@ViewData["Title"]"/>
         
-        <div class="mb-3">
-            <label for="Number">Numer</label><br>
-            <input id="Number" name="Copy.Number" type="text" class="form-control" minlength="3" maxlength="100" value="@Model.Copy.Number" required >
-        </div>
+            <div class="mb-3">
+                <label for="Number">Numer</label>
+                <input id="Number" name="Copy.Number" type="text" class="form-control" minlength="3" maxlength="100" value="@Model.Copy.Number" required >
+            </div>
 
-        <div class="mb-3">
-            <label for="Status">Status</label><br>
-            <select id="Status" name="Copy.Status" class="form-control" >
-                @for (int i = 0; i < @ViewBag.Categories.Count; i++)
-                {
-                    @if (i == int.Parse(Model.Copy.Status)){
-                        <option value="@i" selected>@ViewBag.Categories[@i]</option>
+            <div class="mb-3">
+                <label for="Status">Status</label>
+                <select id="Status" name="Copy.Status" class="form-control" >
+                    @for (int i = 0; i < @ViewBag.Categories.Count; i++){
+                        @if (i == int.Parse(Model.Copy.Status)){
+                            <option value="@i" selected>@ViewBag.Categories[@i]</option>
+                        }
+                        else {
+                            <option value="@i">@ViewBag.Categories[@i]</option>
+                        }
                     }
-                    else {
-                        <option value="@i">@ViewBag.Categories[@i]</option>
-                    }
-                }
-            </select>
-        </div>
+                </select>
+            </div>
         
-        <button class="btn btn-primary" type="submit">Zapisz</button>
-    </form>
+            <partial name="Templates/_FormButton"/>
+        </form>
+    </div>
 </div>
