--- a/LibraryApp/Views/Copy/Index.cshtml
+++ b/LibraryApp/Views/Copy/Index.cshtml
@@ -1,1 +1,11 @@
-﻿
+﻿@model CopyBookAuthorViewModel
+@{
+    ViewData["Title"] = "Egzemplarze";
+    string path = "/Copy";
+}
+
+<partial name="Templates/_Alert" model="@TempData["Alert"]?.ToString()"/>
+<partial name="Templates/_ListBar" model="@path"/>
+<partial name="Templates/_CopyListAdmin"/>
+
+
