--- a/LibraryApp/Views/Loan/Index.cshtml
+++ b/LibraryApp/Views/Loan/Index.cshtml
@@ -6,15 +6,15 @@
 
 @{
     ViewData["Title"] = "Wypożyczanie";
+    string path = "/Loan";
 }
 
-lista wypożyczeń
+<partial name="Templates/_Alert" model="@TempData["Alert"]?.ToString()"/>
+<partial name="Templates/_ListBar" model="@path"/>
 
-<ul class="list-group mt-4">
-    @if (User.IsInRole("Admin")){
-        <partial name="Templates/_LoanListAdmin" model="@Model"/>
-    }
-    else if (SignInManager.IsSignedIn(User)){
-        <partial name="Templates/_LoanList" model="@Model"/>
-    }
-</ul>
+@if (User.IsInRole("Admin")){
+    <partial name="Templates/_LoanListAdmin"/>
+}
+else if (SignInManager.IsSignedIn(User)){
+    <partial name="Templates/_LoanList"/>
+}
