--- a/LibraryApp/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/LibraryApp/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -1,22 +1,23 @@
 ﻿@page
 @model ForgotPasswordModel
 @{
-    ViewData["Title"] = "Forgot your password?";
+    ViewData["Title"] = "Zapomniałeś hasła?";
 }
 
-<h1>@ViewData["Title"]</h1>
-<h2>Enter your email.</h2>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+
+<div class="col-sm-6 mx-auto">
+    <div class="bg-white rounded shadow p-4">
         <form method="post">
+            <h1>@ViewData["Title"]</h1>
+            <h2>Wprowadź swój email.</h2>
+            <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-floating">
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
-                <label asp-for="Input.Email" class="form-label"></label>
+            <div class="mb-3">
+                <label asp-for="Input.Email" class="form-label">Email</label>
+                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />  
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Reset Password</button>
+            <button type="submit" class="w-100 btn btn-lg btn-primary mb-4">Resetuj hasło</button>
         </form>
     </div>
 </div>
