--- a/LibraryApp/Views/Copy/Create.cshtml
+++ b/LibraryApp/Views/Copy/Create.cshtml
@@ -3,24 +3,27 @@
     ViewData["Title"] = "Dodaj egzemplarz";
 }
 
-<partial name="Templates/_Alert" model="@ViewData["Alert"]?.ToString()"/>
+<partial name="Templates/_BackButton"/>
 
 <div class="col-sm-6 mx-auto">
-    <form asp-controller="Copy" asp-action="Create" method="post">
-        <h1>Dodaj egzemplarz</h1>
+    <partial name="Templates/_Alert" model="@ViewData["Alert"]?.ToString()"/>
+    <div class="bg-white rounded shadow p-4">
+        <form asp-controller="Copy" asp-action="Create" method="post">
+            <partial name="Templates/_FormHeader" model="@ViewData["Title"]"/>
         
-        <div class="mb-3">
-            <label for="Number">Numer</label><br>
-            <input id="Number" name="Copy.Number" type="text" class="form-control" minlength="3" maxlength="100" required>
-        </div>
+            <div class="mb-3">
+                <label for="Number">Numer</label>
+                <input id="Number" name="Copy.Number" type="text" class="form-control" minlength="3" maxlength="100" required>
+            </div>
 
-        <div class="mb-3">
-            <label for="Status">Status</label><br>
-            <select id="Status" name="Copy.Status" class="form-control">
-                <partial name="Templates/_Select" model="@ViewBag.Categories"/>
-            </select>
-        </div>
+            <div class="mb-3">
+                <label for="Status">Status</label>
+                <select id="Status" name="Copy.Status" class="form-control">
+                    <partial name="Templates/_Select" model="@ViewBag.Categories"/>
+                </select>
+            </div>
         
-        <button class="btn btn-primary" type="submit">Zapisz</button>
-    </form>
+            <partial name="Templates/_FormButton"/>
+        </form>
+    </div>
 </div>
