--- a/LibraryApp/Views/Home/Index.cshtml
+++ b/LibraryApp/Views/Home/Index.cshtml
@@ -1,11 +1,19 @@
-﻿@{
+﻿@using Microsoft.AspNetCore.Identity
+@using LibraryApp.Areas.Identity.Data
+
+@inject SignInManager<AppUser> SignInManager
+@inject UserManager<AppUser> UserManager
+
+@{
     ViewData["Title"] = "Strona główna";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+@if (!User.IsInRole("Admin")){
+    <div class="container">
+        <partial name="Templates/_IndexPage"/>
+    </div>
+}
+else {
+    <partial name="Templates/_IndexPage"/>
+}
 
-
-tu będą książki
