--- a/LibraryApp/Views/Shared/Templates/_ListBarCategory.cshtml
+++ b/LibraryApp/Views/Shared/Templates/_ListBarCategory.cshtml
@@ -2,7 +2,7 @@
 
 <div class="row ps-2 pe-2 pb-2">
     <div class="col-12">
-        <label for="Search" class="col-form-label me-3">Wyszukiwanie</label>
+        <label for="Search" class="form-label me-3">Wyszukiwanie</label>
         <form class="d-flex" action="@Model">
             <input id="SearchString" name="SearchString" type="text" class="form-control me-2"/>
             <button class="btn btn-primary d-flex" type="submit"><i class="bi bi-search"></i>&nbsp;&nbsp;Szukaj</button>  
