--- a/LibraryApp/Views/Shared/Templates/_UserList.cshtml
+++ b/LibraryApp/Views/Shared/Templates/_UserList.cshtml
@@ -21,18 +21,16 @@
                     <td><a class="text-decoration-none text-dark" asp-route-id="@user.Id" asp-controller="User" asp-action="Details">@user.UserName</a></td>
                     <td>@user.Email</td>
                     <td class="text-end">
-                    @if (UserManager.GetUserId(User) != @user.Id)
-                    {
-                        <a class="btn btn-outline-primary" asp-route-id="@user.Id" asp-controller="User" asp-action="Role">Zarządzaj rolą</a>
+                    @if (UserManager.GetUserId(User) != @user.Id){
+                        <a class="btn btn-primary mb-1" asp-route-id="@user.Id" asp-controller="User" asp-action="Role">Rola</a>
                         <a class="btn btn-success mb-1" asp-route-id="@user.Id" asp-controller="User" asp-action="Edit"><i class="bi bi-pencil-square"></i></a>
                         <a class="btn btn-danger mb-1" data-bs-toggle="modal" data-bs-target="#deleteModal"><i class="bi bi-trash3-fill"></i></a>
                         <form asp-route-id="@user.Id" asp-controller="User" asp-action="Delete" method="post">
                             <partial name="Templates/_ModalDelete"/>
                         </form>
                     }
-                    else
-                    {
-                        <a class="btn btn-outline-primary" asp-route-id="@UserManager.GetUserId(User)" asp-controller="User" asp-action="Edit">Edytuj profil</a>
+                    else {
+                        <a class="btn btn-primary" asp-route-id="@UserManager.GetUserId(User)" asp-controller="User" asp-action="Edit">Edytuj profil</a>
                     }
                 </tr>
             }
