--- a/LibraryApp/Views/Shared/_LoginPartial.cshtml
+++ b/LibraryApp/Views/Shared/_LoginPartial.cshtml
@@ -8,10 +8,10 @@
     @if (User.IsInRole("Admin"))
     {
         <li class="nav-item">
-            <a id="manage" class="nav-link text-dark text-white" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Admin @UserManager.GetUserName(User)</a>
+            <a id="manage" class="nav-link text-white" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Admin @UserManager.GetUserName(User)</a>
         </li>
         <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             </a>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" asp-controller="Book" asp-action="Index">Książki</a></li>
@@ -32,7 +32,7 @@
     else if (SignInManager.IsSignedIn(User))
     {
         <li class="nav-item">
-            <a id="user" class="nav-link text-dark" title="User">@UserManager.GetUserName(User)</a>
+            <a id="user" class="nav-link text-white" title="User">@UserManager.GetUserName(User)</a>
         </li>
 
         <li class="nav-item dropdown">
@@ -55,10 +55,10 @@
     else
     {
         <li class="nav-item">
-            <a class="nav-link text-dark" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
+            <a class="nav-link text-white fw-bold" id="register" asp-area="Identity" asp-page="/Account/Register">Rejestracja</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-dark" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
+            <a class="nav-link text-white fw-bold" id="login" asp-area="Identity" asp-page="/Account/Login">Logowanie</a>
         </li>
     }
 </ul>
