--- a/LibraryApp/Views/User/Role.cshtml
+++ b/LibraryApp/Views/User/Role.cshtml
@@ -16,7 +16,7 @@
             </div>
 
             <div class="mb-3">
-                <select name="Role">
+                <select name="Role" class="form-control">
                 <option value="Admin">Administrator</option>
                 <option value="User">Zwykły użytkownik</option>
                 </select>
