Sorting and pagination have been added

--- a/LibraryApp/Views/Author/Index.cshtml
+++ b/LibraryApp/Views/Author/Index.cshtml
@@ -4,5 +4,6 @@
 }
 
 <partial name="Templates/_Alert" model="@TempData["Alert"]?.ToString()"/>
-<partial name="Templates/_ListBar" model="@path"/>
+<partial name="Templates/_SearchBar" model="@path"/>
 <partial name="Templates/_AuthorList" model="@Model"/>
+<partial name="Templates/_Pagination" model="@Model"/>
