--- a/LibraryApp/Views/Copy/Index.cshtml
+++ b/LibraryApp/Views/Copy/Index.cshtml
@@ -5,7 +5,8 @@
 }
 
 <partial name="Templates/_Alert" model="@TempData["Alert"]?.ToString()"/>
-<partial name="Templates/_ListBar" model="@path"/>
+<partial name="Templates/_SearchBar" model="@path"/>
 <partial name="Templates/_CopyListAdmin"/>
+<partial name="Templates/_Pagination" model="@Model.CopyList"/>
 
 
