--- a/LibraryApp/Views/Loan/Index.cshtml
+++ b/LibraryApp/Views/Loan/Index.cshtml
@@ -10,7 +10,7 @@
 }
 
 <partial name="Templates/_Alert" model="@TempData["Alert"]?.ToString()"/>
-<partial name="Templates/_ListBar" model="@path"/>
+<partial name="Templates/_SearchBar" model="@path"/>
 
 @if (User.IsInRole("Admin")){
     <partial name="Templates/_LoanListAdmin"/>
@@ -18,3 +18,5 @@
 else if (SignInManager.IsSignedIn(User)){
     <partial name="Templates/_LoanList"/>
 }
+
+<partial name="Templates/_Pagination" model="@Model"/>
