--- a/LibraryApp/Views/Shared/Templates/_BookList.cshtml
+++ b/LibraryApp/Views/Shared/Templates/_BookList.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@foreach (var Book in Model)
+@foreach (var Book in @Model.BookList)
 {
     <li class="list-group-item d-flex justify-content-between">
         <div class="align-self-center">
