--- a/LibraryApp/Views/Shared/Templates/_BookListAdmin.cshtml
+++ b/LibraryApp/Views/Shared/Templates/_BookListAdmin.cshtml
@@ -1,25 +1,31 @@
 ﻿<div class="bg-white rounded shadow ps-3 pe-3 pt-1 pb-1 mt-3">
-    <table class="table table-hover">
+    <table class="table table-hover table-responsive">
         <thead>
             <tr>
                 <th scope="col">Id</th>
-                <th scope="col">Tytuł</th>
+                <th scope="col">Tytuł&nbsp;&nbsp;
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Book", new { sortOrder = "TitleAsc", searchString = ViewData["SearchString"] })"><i class="bi bi-arrow-up"></i></a>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Book", new { sortOrder = "TitleDesc", searchString = ViewData["SearchString"] })"><i class="bi bi-arrow-down"></i></a>
+                </th>
                 <th scope="col">Zdjęcie</th>
                 <th scope="col">Autor</th>
-                <th scope="col">Kategoria</th>
+                <th scope="col">Data&nbsp;&nbsp;
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Book", new { sortOrder = "DateAsc", searchString = ViewData["SearchString"] })"><i class="bi bi-arrow-up"></i></a>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Book", new { sortOrder = "DateDesc", searchString = ViewData["SearchString"] })"><i class="bi bi-arrow-down"></i></a>
+                </th>
                 <th scope="col" class="text-end"><a class="btn btn-primary" asp-controller="Book" asp-action="Create"><i class="bi bi-plus-lg"></i></a></th>
             </tr>
         </thead>
 
         <tbody>
-            @foreach (var Book in @Model.Books)
+            @foreach (var Book in @Model.BookList)
             {
                 <tr>
                     <th scope="row">@Book.Id</th>
-                    <td><a class="text-decoration-none text-dark" asp-route-id="@Book.Id" asp-controller="Book" asp-action="Details">@Book.Title</a></td>
+                    <td class="col-3"><a class="text-decoration-none text-dark" asp-route-id="@Book.Id" asp-controller="Book" asp-action="Details">@Book.Title</a></td>
                     <td><img src="~/images/@Book.Image" style="object-fit: cover;" height="100"/></td>
-                    <td><a class="text-decoration-none text-dark">@Book.Author.Name @Book.Author.LastName</a></td>
-                    <td>Kategoria</td>
+                    <td class="col-2"><a class="text-decoration-none text-dark">@Book.Author.Name @Book.Author.LastName</a></td>
+                    <td>@Book.Date</td>
                     <td class="text-end">
                         <a class="btn btn-success mb-1" asp-route-id="@Book.Id" asp-controller="Book" asp-action="Edit"><i class="bi bi-pencil-square"></i></a>
                         <a class="btn btn-danger mb-1" data-bs-toggle="modal" data-bs-target="#deleteModal"><i class="bi bi-trash3-fill"></i></a>
