--- a/LibraryApp/Views/Shared/Templates/_LoanList.cshtml
+++ b/LibraryApp/Views/Shared/Templates/_LoanList.cshtml
@@ -3,20 +3,36 @@
 
 @inject UserManager<AppUser> UserManager
 
-@foreach (var Loan in Model)
-{
-    @if (Loan.UserBorrowingId == @UserManager.GetUserId(User))
-    {
-        <li class="list-group-item d-flex justify-content-between">
-            <div class="align-self-center">
-                <a class="text-decoration-none text-dark"><strong class="mb-1">@Loan.Id</strong></a><br>
-                <small class="small">User @Loan.UserBorrowingId</small>
-                <small class="small">Książka id @Loan.BookId</small>
-            </div>
-            <div class="align-self-center">
-                <small class="small">Data wypożyczenia @Loan.LoanDate</small>
-                <small class="small">Data oddania @Loan.ReturnDate</small>
-            </div>
-        </li>
-    }
-}
+
+<div class="bg-white rounded shadow ps-3 pe-3 pt-1 pb-1 mt-3">
+    <table class="table table-hover">
+        <thead>
+            <tr>
+                <th scope="col">Id Książki</th>
+                <th scope="col">Id Autora</th>
+                <th scope="col">Id Egzemplarza</th>
+                <th scope="col">Data wypożyczenia&nbsp;&nbsp;
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Loan", new { sortOrder = "LoanDateAsc", searchString = ViewData["SearchString"] })"><i class="bi bi-arrow-up"></i></a>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Loan", new { sortOrder = "LoanDateDesc", searchString = ViewData["SearchString"] })"><i class="bi bi-arrow-down"></i></a>
+                </th>
+                <th scope="col">Data oddania&nbsp;&nbsp;
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Loan", new { sortOrder = "ReturnDateAsc", searchString = ViewData["SearchString"] })"><i class="bi bi-arrow-up"></i></a>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Loan", new { sortOrder = "ReturnDateDesc", searchString = ViewData["SearchString"] })"><i class="bi bi-arrow-down"></i></a>
+                </th>
+            </tr>
+        </thead>
+
+        <tbody>
+            @foreach (var Loan in @Model)
+            {
+                <tr>       
+                    <td><a class="text-decoration-none text-dark" asp-route-id="@Loan.BookId" asp-controller="Book" asp-action="Details">@Loan.BookId</a></td>
+                    <td><a class="text-decoration-none text-dark">@Loan.BookId</a></td>
+                    <td><a class="text-decoration-none text-dark" asp-route-id="@Loan.BookId" asp-controller="Book" asp-action="Details">@Loan.CopyId</a></td>
+                    <td>@Loan.LoanDate</td>
+                    <td>@Loan.ReturnDate</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
